--- a/tooltip.css
+++ b/tooltip.css
@@ -13,9 +13,10 @@
     color: white;
     position: absolute;
     top: calc(100% - 20px);
-    left: 0px;
+    left: 100%;
     opacity: 0;
     transition: opacity .1s, top .1s;
+    pointer-events: none;
 }
 [tooltip]:not([disabled]):hover::after {
     visibility: visible;
